Fixing spacing after adding category javascript

--- a/server/view/css/contentPage.css
+++ b/server/view/css/contentPage.css
@@ -304,7 +304,7 @@ a {
 }
 #editContent #addCategory {
     float:left;
-    margin-top:10px;
+    margin-top:8px;
 }
 .accountInfo {
     font-size:10px;
@@ -314,7 +314,7 @@ a {
 Save and cancel buttons
 *****/
  #buttons {
-    margin-bottom:0px;
+    margin-bottom:2px;
 }
 .save {
     float:left;
